samples/_failures_safe/1761006345_7cf06c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb89fc99.c: In function ‘main’:
./samples/SAFE/__tmp_eb89fc99.c:158:20: error: missing terminating " character
  158 |             printf("Invalid edge parameters. Nodes must be 0
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eb89fc99.c:158:13: error: expected expression at end of input
  158 |             printf("Invalid edge parameters. Nodes must be 0
      |             ^~~~~~
./samples/SAFE/__tmp_eb89fc99.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb89fc99.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb89fc99.c:158:13: error: expected declaration or statement at end of input
